tests/errors/parsing/008_missing_type_specifier.c
int main(void) {
    static a;
}