tests/errors/parsing/008_missing_type_specifier.c.expect
./tests/errors/parsing/008_missing_type_specifier.c:2:12: error: missing type specifier
1 | int main(void) {
2 |     static a;
               ^
3 | }
